mdix-go/internal/include/mdix_ffi.h

// How to combine two array-valued entries (GroupArray, or an array-valued
// SimpleProperty) that share a path across sources.
enum ArrayMergeStrategy {
    // The winning source's array entirely replaces the losing one's.
    ARRAY_MERGE_STRATEGY_REPLACE = 0,
    // Both arrays are concatenated, winner's items first.
    ARRAY_MERGE_STRATEGY_CONCAT = 1,
    // Concatenated (winner first), with exact-duplicate primitive values
    // removed. Complex values (objects, nested arrays) are never deduped.
    ARRAY_MERGE_STRATEGY_CONCAT_DEDUP = 2,
};
typedef int32_t ArrayMergeStrategy;
// How to resolve a key defined by more than one source in mdix_merge_sources()
// / mdix_merge_sources_weighted(). Mirrors dixscript::Runtime::MdixMergeStrategy
// — kept as a separate, explicitly #[repr(i32)] local type (same pattern as
// MdixType / MdixFormatMode above) since the core enum's repr is not
// FFI-guaranteed and lives in a different crate. See merge.rs's to_core().
enum MdixMergeStrategy {
    // Each source's weight decides the winner; equal weights fall back to
    // the lower-indexed (primary) source. This is what mdix_merge_sources()
    // (no explicit weights) effectively resolves to, since it auto-assigns
    // descending weights — source 0 gets 1.0, the last source gets ~0.0.
    MDIX_MERGE_STRATEGY_WEIGHTED_PRIORITY = 0,
    // The lower-indexed source always wins, regardless of weight.
    MDIX_MERGE_STRATEGY_PRIMARY_WINS = 1,
    // The higher-indexed source always wins, regardless of weight.
    MDIX_MERGE_STRATEGY_SECONDARY_WINS = 2,
    // Any key defined by more than one source is a hard error — the merge
    // fails and mdix_get_last_error() reports every conflicting path.
    MDIX_MERGE_STRATEGY_THROW_ON_CONFLICT = 3,
};
typedef int32_t MdixMergeStrategy;
// Returns a static pointer to the DixScript FFI version string.
// Do NOT pass this pointer to mdix_free_string() — it is a static allocation.
 const char *mdix_version(void) ;
// Compile and load .mdix source from an in-memory string.
// Useful for Unity TextAssets and embedded configs.
// Returns an opaque handle on success, null on failure.
// Caller must free with mdix_free when done.
 void *mdix_load_str(const char *source) ;
// Free a handle created by any mdix_load* function.
// Passing null is safe. Do not call twice on the same pointer.
 void mdix_free(void *handle) ;
// Returns true if the handle is non-null (i.e. load succeeded).
 bool mdix_is_valid(const void *handle) ;
// Get a 32-bit integer at path. Also works on Enum paths (returns the integer value).
// Returns 0 on failure; check mdix_get_last_error() to distinguish from a real 0.
 int32_t mdix_get_int(const void *handle, const char *path) ;
// Free a C string returned by any mdix getter function.
// Do NOT call on the static pointer from mdix_version(). Passing null is safe.
 void mdix_free_string(char *s) ;
// Returns a pointer to the last error string set on this thread, or null if
// no error is pending. Valid only until the next mdix_* call on this thread.
// Do NOT free this pointer.
 const char *mdix_get_last_error(void) ;
// Create an empty builder for constructing new save data.
// Caller must free with mdix_builder_free when done.
 void *mdix_builder_new(void) ;
// Create a builder pre-populated from an existing loaded handle.
//
// Copies all root-level structural values from the handle into the builder.
// Synthetic indexed children (tags[0], server.host, etc.) are stripped so
// only values that map to valid .mdix identifiers remain editable.
//
// Typical use: load a save file → fork into builder → change a few fields
// → mdix_builder_save back to disk. The original handle remains valid.
//
// Caller must free the returned builder with mdix_builder_free when done.
 void *mdix_builder_from_handle(const void *handle) ;
// Free a builder created by mdix_builder_new or mdix_builder_from_handle.
// Passing null is safe. Do not call twice on the same pointer.
 void mdix_builder_free(void *builder) ;
// Returns the number of entries currently in the builder, or -1 if null.
 int32_t mdix_builder_entry_count(const void *builder) ;
// Clear all entries from the builder. Returns true on success.
 bool mdix_builder_clear(void *builder) ;
 bool mdix_builder_set_string(void *builder, const char *path, const char *value) ;
 bool mdix_builder_set_int(void *builder, const char *path, int32_t value) ;
 bool mdix_builder_set_long(void *builder, const char *path, int64_t value) ;
 bool mdix_builder_set_float(void *builder, const char *path, float value) ;
 bool mdix_builder_set_double(void *builder, const char *path, double value) ;
 bool mdix_builder_set_bool(void *builder, const char *path, bool value) ;
// Remove the entry at path from the builder. Returns true if it existed.
 bool mdix_builder_remove(void *builder, const char *path) ;
// Returns true if the builder contains an entry at path.
 bool mdix_builder_has_key(const void *builder, const char *path) ;
 char *mdix_builder_get_string(const void *builder, const char *path) ;
 int32_t mdix_builder_get_int(const void *builder, const char *path) ;
 int64_t mdix_builder_get_long(const void *builder, const char *path) ;
 float mdix_builder_get_float(const void *builder, const char *path) ;
 double mdix_builder_get_double(const void *builder, const char *path) ;
 bool mdix_builder_get_bool(const void *builder, const char *path) ;
// Serialize the builder's entries and write them to a .mdix file at path.
// Parent directories are created if they do not exist.
// Returns true on success.
 bool mdix_builder_save(const void *builder, const char *path) ;
// Serialize the builder's entries to a pretty-printed .mdix string.
// Caller must free with mdix_free_string().
 char *mdix_builder_to_string(const void *builder) ;
// Merge two or more .mdix source strings into a new handle using the real
// AST-level DixScript merger (dixscript::Runtime::MdixMerger) — full type
// fidelity (Long / Float / Double / HexColor / Blob / Regex / Date /
// Timestamp / Enum all survive exactly, unlike a JSON round-trip), a real
// per-key conflict report, and configurable array merge behavior. See
// merge.rs's module doc for why this takes source strings rather than
// existing handles or file paths.
//
// Sources are weighted in descending order: sources[0] gets weight 1.0,
// sources[count-1] gets the lowest weight (only matters under
// MdixMergeStrategy::WeightedPriority). Use mdix_merge_sources_weighted for
// explicit per-source weights.
//
// `out_conflicts_json`, if non-null, receives a heap string describing
// every conflict that was resolved:
// `[{"path":"...","winningSource":0,"winningLabel":"..."}, ...]`
// (`"[]"` when there were none). Caller must free it with mdix_free_string()
// — independently of whether the merge itself succeeded, except that on
// failure it is left null instead (matching every other out-param in this
// crate: check the pointer, don't assume it was written).
//
// Returns a new opaque handle on success (caller must free with mdix_free),
// null on failure — check mdix_get_last_error().

void *mdix_merge_sources(const char *const *sources,
                         int32_t count,
                         MdixMergeStrategy strategy,
                         ArrayMergeStrategy array_strategy,
                         char **out_conflicts_json)
;
// Merge .mdix source strings with explicit per-source weights (`weights`
// must be the same length as `sources`). Higher weight wins under
// MdixMergeStrategy::WeightedPriority. See mdix_merge_sources for the
// shared semantics (fidelity, conflict report, error handling).

void *mdix_merge_sources_weighted(const char *const *sources,
                                  const double *weights,
                                  int32_t count,
                                  MdixMergeStrategy strategy,
                                  ArrayMergeStrategy array_strategy,
                                  char **out_conflicts_json)
;