mdix-zig/mdix_ffi/mdix_ffi.zig


// ── Merge — weighted AST-level merge of multiple sources ───────────────

/// Merges `count` DixScript source strings with auto-descending weights
/// (source 0 highest) and the given strategies. On success, returns a
/// new read handle (free with `mdix_free`) AND writes a JSON conflict
/// report to `out_conflicts_json.*` (caller must free with
/// `mdix_free_string`; an empty "[]" means no key was defined by more
/// than one source) — pass `null` for `out_conflicts_json` to skip the
/// report. Returns `null` on failure (a source that fails to parse, or
/// `.throw_on_conflict` hitting an actual conflict) — check
/// `mdix_get_last_error` for why.
pub extern fn mdix_merge_sources(
    sources: ?[*]const ?[*:0]const u8,
    count: i32,
    strategy: MdixMergeStrategy,
    array_strategy: MdixArrayMergeStrategy,
    out_conflicts_json: ?*?[*:0]u8,
) callconv(.c) ?*anyopaque;

/// As `mdix_merge_sources`, but with explicit per-source weights —
/// `weights` must have exactly `count` entries, one per source, in the
/// same order.
pub extern fn mdix_merge_sources_weighted(
    sources: ?[*]const ?[*:0]const u8,
    weights: ?[*]const f64,
    count: i32,
    strategy: MdixMergeStrategy,
    array_strategy: MdixArrayMergeStrategy,
    out_conflicts_json: ?*?[*:0]u8,
) callconv(.c) ?*anyopaque;

// ── Hot reload — poll-based file watching ──────────────────────────────

/// Watches a single plaintext `.mdix` path via
/// `dixscript::Runtime::HotReloadWatcher` — a cheap `stat()`-based poll,
/// not an OS filesystem-event subscription. Cheap enough to call
/// `mdix_watcher_check_and_reload` from a game loop / timer tick every
/// frame. Does not read the file yet — the first
/// `mdix_watcher_has_changed`/`mdix_watcher_check_and_reload` call
/// always reports a change. Returns an opaque handle, or `null` on
/// failure (`null`/invalid path). Caller must free with
/// `mdix_watcher_free`. Encrypted `.mdix` files are NOT supported here —
/// `HotReloadWatcher::force_reload` always reloads through the plaintext
/// loader path, a core Runtime limitation.
pub extern fn mdix_watcher_new(path: ?[*:0]const u8) callconv(.c) ?*anyopaque;

pub extern fn mdix_watcher_free(watcher: ?*anyopaque) callconv(.c) void;

/// Caller must free with `mdix_free_string`. `null` if watcher is
/// `null`.
pub extern fn mdix_watcher_path(watcher: ?*anyopaque) callconv(.c) ?[*:0]u8;

/// `true` once a successful reload has happened at least once.
pub extern fn mdix_watcher_has_loaded(watcher: ?*anyopaque) callconv(.c) bool;

/// Checks the file's modified-time without reloading. `false` means
/// either "unchanged" or "error" (bad handle, file missing) — check
/// `mdix_get_last_error` to tell them apart.
pub extern fn mdix_watcher_has_changed(watcher: ?*anyopaque) callconv(.c) bool;

/// Reloads only if the file changed since the last successful reload (or
/// since construction, on the first call). Returns a new read handle
/// (free with `mdix_free`) on a successful reload, or `null` when
/// unchanged OR on error — check `mdix_get_last_error` to tell them
/// apart. On a reload failure the watcher's internal modified-time stamp
/// is NOT updated, so the next call retries against the same file state
/// rather than silently giving up on that change.
pub extern fn mdix_watcher_check_and_reload(watcher: ?*anyopaque) callconv(.c) ?*anyopaque;

/// Reloads unconditionally. Returns a new read handle (free with
/// `mdix_free`), or `null` on failure.
pub extern fn mdix_watcher_force_reload(watcher: ?*anyopaque) callconv(.c) ?*anyopaque;

// ── Builder — lifecycle ────────────────────────────────────────────────

pub extern fn mdix_builder_new() callconv(.c) ?*anyopaque;
/// Creates a builder pre-populated with `handle`'s root-level values —
/// for round-trip editing of an already-loaded file (load → modify a few
/// keys → save), rather than rebuilding one from scratch. Synthetic
/// indexed children (`tags[0]`, `server.host`, ...) are already
/// stripped; only aggregate/root values that map back to valid `.mdix`
/// identifiers carry over. Returns `null` if handle is `null`.
pub extern fn mdix_builder_from_handle(handle: ?*anyopaque) callconv(.c) ?*anyopaque;
pub extern fn mdix_builder_free(builder: ?*anyopaque) callconv(.c) void;
pub extern fn mdix_builder_entry_count(builder: ?*anyopaque) callconv(.c) i32;
pub extern fn mdix_builder_clear(builder: ?*anyopaque) callconv(.c) bool;

// ── Builder — write ─────────────────────────────────────────────────────

pub extern fn mdix_builder_set_string(builder: ?*anyopaque, path: ?[*:0]const u8, value: ?[*:0]const u8) callconv(.c) bool;
pub extern fn mdix_builder_set_int(builder: ?*anyopaque, path: ?[*:0]const u8, value: i32) callconv(.c) bool;
pub extern fn mdix_builder_set_long(builder: ?*anyopaque, path: ?[*:0]const u8, value: i64) callconv(.c) bool;
pub extern fn mdix_builder_set_float(builder: ?*anyopaque, path: ?[*:0]const u8, value: f32) callconv(.c) bool;
pub extern fn mdix_builder_set_double(builder: ?*anyopaque, path: ?[*:0]const u8, value: f64) callconv(.c) bool;
pub extern fn mdix_builder_set_bool(builder: ?*anyopaque, path: ?[*:0]const u8, value: bool) callconv(.c) bool;
pub extern fn mdix_builder_remove(builder: ?*anyopaque, path: ?[*:0]const u8) callconv(.c) bool;

// ── Builder — read back ─────────────────────────────────────────────────

pub extern fn mdix_builder_has_key(builder: ?*anyopaque, path: ?[*:0]const u8) callconv(.c) bool;
pub extern fn mdix_builder_get_string(builder: ?*anyopaque, path: ?[*:0]const u8) callconv(.c) ?[*:0]u8;
pub extern fn mdix_builder_get_int(builder: ?*anyopaque, path: ?[*:0]const u8) callconv(.c) i32;
pub extern fn mdix_builder_get_long(builder: ?*anyopaque, path: ?[*:0]const u8) callconv(.c) i64;
pub extern fn mdix_builder_get_float(builder: ?*anyopaque, path: ?[*:0]const u8) callconv(.c) f32;
pub extern fn mdix_builder_get_double(builder: ?*anyopaque, path: ?[*:0]const u8) callconv(.c) f64;
pub extern fn mdix_builder_get_bool(builder: ?*anyopaque, path: ?[*:0]const u8) callconv(.c) bool;

// ── Builder — persistence ──────────────────────────────────────────────

/// Returned pointer must be freed with `mdix_free_string`.
pub extern fn mdix_builder_to_string(builder: ?*anyopaque) callconv(.c) ?[*:0]u8;
pub extern fn mdix_builder_save(builder: ?*anyopaque, path: ?[*:0]const u8) callconv(.c) bool;

// ── Sanity tests ─────────────────────────────────────────────────────────
// Link-level smoke tests only (no allocation/ownership exercised) — the
// idiomatic `mdix` package's test suite (mdix/tests/, forthcoming) is
// where real behavioral coverage against a running libmdix_ffi lives,
// matching mdix-odin/mdix/tests/.

test "mdix_version returns a non-null static string" {
    const v = mdix_version();
    try std.testing.expect(v != null);
    try std.testing.expect(std.mem.span(v.?).len > 0);
}

test "mdix_load_str / mdix_is_valid / mdix_free round-trip" {
    const handle = mdix_load_str("@DATA( port = 8080 )");
    try std.testing.expect(handle != null);
    defer mdix_free(handle);
    try std.testing.expect(mdix_is_valid(handle));
    try std.testing.expectEqual(@as(i32, 8080), mdix_get_int(handle, "port"));
}

test "mdix_load_str with null source fails safely" {
    const handle = mdix_load_str(null);
    try std.testing.expect(handle == null);
    // mdix_get_last_error is thread-local FFI state, not asserted here —
    // see the idiomatic layer's error-handling tests for that coverage.
}
